spacing fix2

--- a/public/style.css
+++ b/public/style.css
@@ -163,7 +163,7 @@ ul {
 }
 
 #enter {
-  margin-top:40px;
+  margin-top:20px;
   width: 250px;
   height: 40px;
   font-family: Inter;
